# cgviz

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts  websocket.ts
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
frontend/src/components/panels/: FilterPanel.tsx  NodeDetailPanel.tsx  SearchPanel.tsx
frontend/src/graph/: Graph3D.tsx  GraphCanvas.tsx  ambient.ts  cluster.ts  labelRenderer.ts  layouts.ts  styles.ts  useAmbientMotion.ts  useGraphData.ts  useGraphDrag.ts  useGraphEvents.ts  useGraphFocus.ts  useGraphLayout.ts
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: colors.ts  constants.ts  utils.ts
frontend/src/stores/: graphControlStore.ts  graphStore.ts  layoutStore.ts  uiStore.ts
scripts/: build_frontend.py  dev.py
src/cgviz/: __init__.py  __main__.py  cli.py  config.py  server.py
src/cgviz/api/: edges.py  files.py  graph.py  impact.py  nodes.py  router.py  search.py  trace.py  ws.py
src/cgviz/db/: __init__.py  models.py  queries.py  reader.py  watcher.py
