[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgviz"
version = "0.1.0"
description = "Interactive visualization for CodeGraph knowledge graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CodeGraph-Viz Contributors" }]
keywords = ["codegraph", "visualization", "code-analysis", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "watchdog>=4.0",
    "websockets>=12.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
cgviz = "cgviz.cli:main"

[project.urls]
Homepage = "https://github.com/qlinhta/cgviz"
Repository = "https://github.com/qlinhta/cgviz"
Issues = "https://github.com/qlinhta/cgviz/issues"

# The built frontend lives in src/cgviz/static/ but is .gitignored
# (it's a build artifact), so force-include it in both sdist and wheel.
[tool.hatch.build]
artifacts = ["src/cgviz/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/cgviz"]
artifacts = ["src/cgviz/static/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/cgviz",
    "/scripts",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
artifacts = ["src/cgviz/static/**"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
